--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -19,11 +19,11 @@ nav.navbar.navbar-default(role='navigation')
                   //- if owns else other stuff
                 ul.dropdown-menu
                   li(role="presentation")
-                    a#workspaces-button Open View
+                    a#workspaces-button(href="" data-toggle="modal") Open View
                   li(role="presentation")
-                    a#save-workspace-button Save View
+                    a#save-workspace-button(href="" data-toggle="modal") Save View
                   li(role="presentation")
-                    a#share-workspace-button Share View
+                    a#share-workspace-button(href="" data-toggle="modal") Share View
                   li
                     a#analytics-button(href="" data-toggle="modal" data-target="#analytics-modal") Stats
                   
