--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -26,7 +26,9 @@ nav.navbar.navbar-default(role='navigation')
                     a#share-workspace-button(href="" data-toggle="modal") Share View
                   li
                     a#analytics-button(href="" data-toggle="modal" data-target="#analytics-modal") Stats
-                  
+                  li 
+                    a#settings-button(href="" data-toggle="modal") Settings
+
         #gdocs-nav.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right 
             if isAuthenticated
