--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -7,7 +7,7 @@ nav.navbar.navbar-default(role='navigation')
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href='http://thecograph.com')
-            img#brand-logo(src="assets/images/logo.svg")
+            img#brand-logo(src="/assets/images/logo.svg")
           
         span.navbar-doc-title
             .form-group
