--- a/app/public/profileheader.jade
+++ b/app/public/profileheader.jade
@@ -25,3 +25,8 @@ nav.navbar.navbar-default(role='navigation')
                 a(href="/account") Account
               li
                 a(href="/logout") Logout
+    else
+      #gdocs-nav.collapse.navbar-collapse
+        ul.nav.navbar-nav.navbar-right
+          li
+            a(href="/login") Login
