--- a/app/templates/graph_settings.html
+++ b/app/templates/graph_settings.html
@@ -1,3 +1,6 @@
-Graph name
-Public / Private
-a.public-button.clickable(title="who can see this graph")
+<h4>Cograph Name</h4>
+<input id="menu-title" type="text" placeholder="Untitled Doc" />
+<h4>Who can view it</h4>
+<a class="public-button-view clickable" title="who can see this graph"></a>
+<h4>Who can edit it</h4>
+<a class="public-button-edit clickable" title="who can see this graph"></a>
