new logo and icon

--- a/app/public/user-index.jade
+++ b/app/public/user-index.jade
@@ -33,8 +33,7 @@ html(lang='en')
             span.icon-bar
             span.icon-bar
           a.navbar-brand.nav-link
-            img.brand-logo(src='assets/images/logo.png', height='40px')
-            | Cograph
+            img.brand-logo(src='assets/images/brand-w.png')
 
         .collapse.navbar-collapse.navbar-ex1-collapse
           ul.nav.navbar-nav.navbar-right
