--- a/app/assets/stylesheets/landing.css
+++ b/app/assets/stylesheets/landing.css
@@ -39,6 +39,9 @@ body, h1, h2, h3, h4, h5, h6 {
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 2px;
 }
+.brand-logo {
+  height: 50px;
+}
 .container {
   max-width: 1100px;
 }
