syntax of message

--- a/app/public/profile.jade
+++ b/app/public/profile.jade
@@ -32,7 +32,7 @@ head
               if userDocs.length == 0
                 span
                   | You have no cographs. 
-                  a(href="/new") Create new cograph
+                  a(href="/new") Create a new cograph
           .col-sm-6
             h3 Public Cographs
             .document-list
