--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -616,6 +616,10 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 // end
 
+#menu-title-display {
+  margin: 0 0 0 10px;
+}
+
 .panel-heading, .panel-body {
   padding-left: 0;
   padding-right: 0;
