--- a/app/templates/graph_settings.html
+++ b/app/templates/graph_settings.html
@@ -1,6 +1,30 @@
-<h4>Cograph Name</h4>
-<input id="menu-title" type="text" placeholder="Untitled Doc" />
-<h4>Who can view it</h4>
+<h6>Cograph Name</h6>
+<input id="menu-title" type="text" placeholder="Untitled Doc" value="<%=name%>" />
+<h6>Who can see it</h6>
 <a class="public-button-view clickable" title="who can see this graph"></a>
-<h4>Who can edit it</h4>
+<div class="btn-group btn-group-justified">
+  <div class="btn-group">
+    <button type="button" class="btn btn-default">Anyone</button>
+  </div>
+  <div class="btn-group">
+    <button type="button" class="btn btn-default">Anyone with the link</button>
+  </div>
+  <div class="btn-group">
+    <button type="button" class="btn btn-default">Only me</button>
+  </div>
+</div>
+<h6>Who can edit it</h6>
 <a class="public-button-edit clickable" title="who can see this graph"></a>
+<div class="btn-group btn-group-justified">
+  <div class="btn-group">
+    <button type="button" class="btn btn-default">Anyone</button>
+  </div>
+  <div class="btn-group">
+    <button type="button" class="btn btn-default">Anyone with the link</button>
+  </div>
+  <div class="btn-group">
+    <button type="button" class="btn btn-default">Only me</button>
+  </div>
+</div>
+<br/>
+<button class="btn btn-default pull-right">Save Changes</button>
