--- a/app/public/profile.jade
+++ b/app/public/profile.jade
@@ -28,7 +28,7 @@ head
             h3 My Cographs
             .document-list
               for doc in userDocs
-                a.list-group-item(href="#{user.local.name}/document/#{doc.id}" target="_blank") #{doc.name}
+                a.list-group-item(href="/#{user.local.name}/document/#{doc.id}" target="_blank") #{doc.name}
               if userDocs.length == 0
                 span
                   | You have no cographs. 
@@ -37,14 +37,14 @@ head
             h3 Public Cographs
             .document-list
               for doc in docs
-                a.list-group-item(href="#{doc.createdBy}/document/#{doc.id}" target="_blank")
+                a.list-group-item(href="/#{doc.createdBy}/document/#{doc.id}" target="_blank")
                   | #{doc.name}
-                  small.pull-right.text-muted by @#{doc.createdBy}
+                  a.pull-right.text-muted.link-badge(href="/#{doc.createdBy}") by @#{doc.createdBy}
       else
         .row
           .col-sm-12
             .document-list
               for doc in userDocs
-                a.list-group-item(href="#{user.local.name}/document/#{doc.id}" target="_blank")
+                a.list-group-item(href="/#{user.local.name}/document/#{doc.id}" target="_blank")
                   | #{doc.name}
-                  small.pull-right.text-muted by @#{doc.createdBy}
+                  a.pull-right.text-muted.link-badge(href="/#{doc.createdBy}") by @#{doc.createdBy}
