--- a/app/public/profileheader.jade
+++ b/app/public/profileheader.jade
@@ -16,7 +16,7 @@ nav.navbar.navbar-default(role='navigation')
               img(src="assets/images/newgraph.png" height="32px" style="margin-top:-9px;")
           li.dropdown
             a.dropdown-toggle(data-toggle='dropdown', href='')
-              | #{user.local.name}
+              | @#{user.local.name}
               i.caret
             ul.dropdown-menu
               li
