--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -388,6 +388,9 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   margin: 2px 0px;
 }
 
+#menu-title-dropdown i {
+  font-size: 16pt;
+}
 
 .search-title {
   display: block;
@@ -406,8 +409,8 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 .navbar-doc-title {
   position: absolute;
-  top: 10px;
-  left: ~"calc(50% - 120px)";
+  top: 13px;
+  left: ~"calc(50% - 50px)";
 }
 
 .clickable {
