--- a/app/templates/graph_settings.html
+++ b/app/templates/graph_settings.html
@@ -17,13 +17,13 @@
 <a class="public-button-edit clickable" title="who can see this graph"></a>
 <div class="btn-group btn-group-justified">
   <div class="btn-group">
-    <button type="button" data-type="2" class="btn btn-default public-button-edit">Anyone</button>
+    <button type="button" data-type="2" class="btn <%=canPublicEdit == 2 ? 'selected' : ''%> btn-default public-button-edit">Anyone</button>
   </div>
   <div class="btn-group">
-    <button type="button" data-type="1" class="btn btn-default public-button-edit">Anyone with the link</button>
+    <button type="button" data-type="1" class="btn <%=canPublicEdit == 1 ? 'selected' : ''%> btn-default public-button-edit">Anyone with the link</button>
   </div>
   <div class="btn-group">
-    <button type="button" data-type="0" class="btn btn-default public-button-edit">Only me</button>
+    <button type="button" data-type="0" class="btn <%=canPublicEdit == 0 ? 'selected' : ''%> btn-default public-button-edit">Only me</button>
   </div>
 </div>
 <br/>
