fixed title positions, reorganzied code and made docs have 3 modes

--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -392,6 +392,10 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   font-size: 16pt;
 }
 
+#menu-title {
+  width: 100%;
+}
+
 .search-title {
   display: block;
   padding: 2px 5px 0;
