--- a/app/templates/details_box.html
+++ b/app/templates/details_box.html
@@ -6,7 +6,7 @@
           <% if (node.constructor.name === "NodeModel") {%>
             <button id="edit-node-button" class="btn btn-primary">Edit</button>
             <button id="expand-node-button" class="btn btn-default">Expand</button>
-            <button id="archive-node-button" class="btn btn-warning">Archive</button>
+            <button id="archive-node-button" class="btn btn-warning">Hide</button>
           <% } else { %>
             <button id="edit-connection-button" class="btn btn-default">Edit</button>
             <button id="archive-connection-button" class="btn btn-warning">Archive</button>
