footer, fixed public viewable docs and slight changes to profile

--- a/app/assets/stylesheets/general.less
+++ b/app/assets/stylesheets/general.less
@@ -5,7 +5,7 @@
 @font: 'Varela Round', Helvetica, sans-serif;
 
 body {
-	font-family: @font;
+	font-family: @font, sans-serif;
 }
 
 .cf:before,
@@ -44,4 +44,22 @@ body {
 
 .form-control {
   border-radius: 0 !important;
+}
+
+footer {
+  background: #f2e244;
+  font-size: 16px;
+  margin: 3.5em 0 0;
+  padding: 1.5em 0 0.8em;
+  color: inherit;
+}
+
+footer a {
+  color: inherit;
+}
+
+footer a:hover {
+  color: #222;
+  text-decoration: none;
+  border-bottom: 2px solid white;
 }
