--- a/app/public/user-index.jade
+++ b/app/public/user-index.jade
@@ -133,16 +133,7 @@ html(lang='en')
           h3 
             strong Faster access
           p Browser extensions to make it faster to connect content
-    footer
-      .container.clearfix
-        p.pull-left
-          | Copyright 2014 © Graphdocs Inc.
-        p.pull-right
-          a(href='/login') Login
-          | &nbsp;&nbsp;&nbsp;&nbsp;
-          a(href='/signup') Sign up
-          | &nbsp;&nbsp;&nbsp;&nbsp;
-          a(href='mailto:hello@thecograph.com') Contact
+    include footer
     script(src="neural/js/vendor/Detector.js")
     script(src="neural/js/vendor/dat.gui.min.js")
     script(src="neural/js/vendor/stats.min.js")
