muted footer color, fixed contact url

--- a/app/assets/stylesheets/general.less
+++ b/app/assets/stylesheets/general.less
@@ -47,7 +47,7 @@ body {
 }
 
 footer {
-  background: #f2e244;
+  background: #F0FFB3;
   font-size: 16px;
   margin: 3.5em 0 0;
   padding: 1.5em 0 0.8em;
