--- a/app/public/footer.jade
+++ b/app/public/footer.jade
@@ -7,4 +7,4 @@ footer
       | &nbsp;&nbsp;&nbsp;&nbsp;
       a(href='/signup') Sign up
       | &nbsp;&nbsp;&nbsp;&nbsp;
-      a(href='mailto:hello@thecograph.com') Contact
+      a(href='mailto:hello@cograph.co') Contact
