--- a/app/public/profile.jade
+++ b/app/public/profile.jade
@@ -26,7 +26,7 @@ head
       if ownProfile
         .row
           .col-sm-6
-            h3 My Cographs
+            h3 Your Cographs
             .document-list
               for doc in userDocs
                 a.list-group-item(href="/#{user.local.name}/document/#{doc.id}" target="_blank") #{doc.name}
