--- a/app/templates/graph_settings.html
+++ b/app/templates/graph_settings.html
@@ -27,4 +27,4 @@
   </div>
 </div>
 <br/>
-<button id="save-graph-settings" class="btn btn-primary pull-right">Save Changes</button>
+<button id="save-graph-settings" class="btn btn-info pull-right">Save Changes</button>
