--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -45,7 +45,7 @@ nav.navbar.navbar-default(role='navigation')
           ul.nav.navbar-nav.navbar-right
             li
               a.clickable#embed-button(type="button" data-toggle="popover" data-placement="bottom") 
-                | Embed Code
+                | Embed
             if isAuthenticated
               li#newgraph-icon
                 a(href="/new" target="_blank" title="new graph")
