--- a/app/assets/stylesheets/nav.less
+++ b/app/assets/stylesheets/nav.less
@@ -44,6 +44,11 @@
   padding: 6px;
 }
 
+#gdocs-nav .popover-content {
+  word-break: break-all;
+  width: 200px;
+}
+
 #menu-title:focus {
   cursor: text;
 }
