changed login page. unfinished

--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -43,9 +43,14 @@ nav.navbar.navbar-default(role='navigation')
 
         #gdocs-nav.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
-            li
-              a.clickable#embed-button(type="button" data-toggle="popover" data-placement="bottom") 
-                | Embed
+            if isOwner
+              li
+                a.clickable#publish-button 
+                  | Publish
+            else
+              li
+                a.clickable#embed-button(type="button" data-toggle="popover" data-placement="bottom") 
+                  | Embed
             if isAuthenticated
               li#newgraph-icon
                 a(href="/new" target="_blank" title="new graph")
