--- a/app/public/login.jade
+++ b/app/public/login.jade
@@ -5,23 +5,38 @@ html
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css')
     link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     link(href='/assets/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
-    link(href='/assets/stylesheets/custom-bootstrap-theme.css', rel='stylesheet')
+    link(href="neural/css/app.css", rel='stylesheet')
     link(href='/assets/stylesheets/general.css', rel='stylesheet')
-    link(href='/assets/stylesheets/nav.css', rel='stylesheet')
     link(href='/assets/stylesheets/login.css', rel='stylesheet')        
-    base(href="/")
+
   body
-    include profileheader
+    #canvas-container.jumbotron
+    script#vertexshader-axon(type='x-shader/x-vertex').
+      uniform float opacityMultiplier;
+      attribute float opacityAttr;
+      varying float opacityNew;
+      void main() {
+        opacityNew = opacityAttr * opacityMultiplier;
+        gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0 );
+      }
+    script#fragmentshader-axon(type='x-shader/x-fragment').
+      uniform vec3 color;
+      varying float opacityNew;
+      void main() {
+        gl_FragColor = vec4(color, opacityNew);
+      }
+    #brand-big
+      a(href="/")
+        img(src="/assets/images/logo.png")
     .container-fluid.pad-top
       .row
-        .col-md-6.col-md-offset-3.col-xs-12(style="background: white")
+        .col-md-6.col-md-offset-3.col-xs-12#login-form
           h3
             strong Welcome Back!
           br
           p  
             a(href="/auth/twitter")
               img(src="assets/images/sign-in-with-twitter.png")
-          strong OR
           hr
           // show any messages that come back with authentication
           if message.length > 0 
@@ -42,3 +57,10 @@ html
           p
             | Or go 
             a(href='/') home
+    script(src="neural/js/vendor/Detector.js")
+    script(src="neural/js/vendor/dat.gui.min.js")
+    script(src="neural/js/vendor/stats.min.js")
+    script(src="neural/js/vendor/three.min.js")
+    script(src="neural/js/vendor/OrbitControls.js")
+    script(src="neural/js/vendor/OBJLoader.js")
+    script(src="neural/js/three-app.js")
