--- a/app/assets/stylesheets/graph.less
+++ b/app/assets/stylesheets/graph.less
@@ -512,7 +512,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 #add {
   font-size: 15pt;
-  width: 420px;
+  width: 330px;
   border: 1px solid rgba(0,0,0,0.1);
   box-sizing: border-box;
   background: rgb(250,250,250);
@@ -580,6 +580,13 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   border-radius: 50px;
 }
 
+// ADDER
+
+.toolbar.right .navbar-right {
+  margin: 0;
+  padding: 0;
+}
+
 #add-toolbar-left button:hover {
   color: #333;
 }
@@ -613,13 +620,13 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
 
 #add-toolbar {
-  width: 400px;
+  width: 308px;
   border: 0;
   outline: none;
 }
 
 #add-title {
-  width: 600px;
+  width: 320px;
   font-weight: 400;
   width: 100%;
   border: 0;
@@ -636,7 +643,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
 
 #add-description {
-  width: 400px;
+  width: 308px;
   max-height: 200px;
   font-weight: 500;
   font-size: 14px;
@@ -647,7 +654,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   background: transparent;
 }
 
-// end
+// end ADDER
 
 #menu-title-display {
   margin: 0 0 0 10px;
