--- a/app/assets/stylesheets/landing.css
+++ b/app/assets/stylesheets/landing.css
@@ -22,6 +22,13 @@
   font-family: 'Gotham Light';
   padding-top: 20px;
 }
+.main-content h3:not(.full-size) {
+  text-transform: uppercase;
+  font-size: 16px;
+}
+.main-content strong {
+  color: #aaa;
+}
 #button-container {
  margin-top: 60px; 
 }
@@ -29,6 +36,7 @@ hr {
   border-top: 1px solid #ddd;
 }
 body {
+  -webkit-font-smoothing: antialiased;
   font-size: 14px;
 }
 body, h1, h2, h3, h4, h5, h6 {
@@ -36,7 +44,10 @@ body, h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
 }
 #top h1 {
-  font-family: 'Gotham Light';
+  text-transform: uppercase;
+  font-size: 40pt;
+  color: white;
+  opacity: 0.9;
 }
 .btn {
   border-top: 1px solid rgba(255, 255, 255, 0.5);
@@ -164,14 +175,6 @@ body, h1, h2, h3, h4, h5, h6 {
   font-size: 2em;
   font-weight: bold;
 }
-#slideshow {
-  margin: 0.5em 0 1.5em;
-}
-#slideshow .carousel-inner img {
-  background: #000;
-  height: 500px;
-  width: 100%;
-}
 @media screen and (max-width: 768px) {
   .navbar ul.nav li {
     text-align: center;
@@ -238,7 +241,7 @@ body, h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   font-weight: 200;
   background: rgba(0,0,0,0.4);
-  border: 2px solid #f2e244;
+  border: 0;
   border-radius: 0px;
   padding: 20px 60px;
 }
@@ -250,12 +253,29 @@ body, h1, h2, h3, h4, h5, h6 {
 
 .call-to-action.btn-default {
   color: white;
-  border: 2px solid #ffa73a;
-
+/*  border: 2px solid #ffa73a;
+*/
 }
 
 footer {
-  background: #f2e244;
+  background: #F0FFB3;
+  font-size: 16px;
+  margin: 3.5em 0 0;
+  padding: 1.5em 0 0.8em;
+  color: inherit;
+}
+
+footer a {
+  color: inherit;
+}
+
+footer a:hover {
+  color: #222;
+  text-decoration: none;
+  border-bottom: 2px solid white;
+}
+
+footer {
   font-size: 16px;
   margin: 3.5em 0 0;
   padding: 1.5em 0 0.8em;
