--- a/app/assets/stylesheets/login.less
+++ b/app/assets/stylesheets/login.less
@@ -1,3 +1,48 @@
-body {
-  background: url('/assets/images/bg.png');
+html, body {
+	margin: 0;
+	height: 100% !important;
+}
+
+.dg.ac, #stats {
+  display: none;
+}
+
+#top {
+  background: transparent;
+  color: white;
+}
+
+#brand-big {
+	margin: 0 auto;
+	width: 120px;
+	padding: 40px 20px 40px 20px;
+}
+
+#brand-big img {
+	width: 80px;
+}
+
+#canvas-container {
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  padding: 0;
+  margin: 0;
+  z-index: -1;
+}
+
+#canvas-container canvas {
+  top: 0;
+  position: relative;
+  z-index: 1;
+  height: 550px !important;
+  width: 100% !important;
+}
+
+#login-form {
+  background: rgba(256,256,256,1);
+  padding: 0px 20px;
+  border-radius: 20px;
 }
