--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -23,7 +23,7 @@ block content
                 input#add-image-container.hidden(type="text", placeholder="image url")
               #add-toolbar-right
                 button#add-submit(title='Create something')
-                  | Done
+                  | Create
 
     .toolbar.bottom.right.controls#toolbar-bottom-right
       ul.nav.navbar-nav
