replaced graphdocs with cograph

--- a/app/public/errors/missingDocument.jade
+++ b/app/public/errors/missingDocument.jade
@@ -1,14 +1,16 @@
 doctype html
 html(lang='en')
+
 head
     meta(charset='utf-8')
-    title 404 Error!
+    title Cograph | 404
+    link(href='/assets/stylesheets/general.css', rel='stylesheet')  
     base(href='/')
   html
     body(style='text-align: center; font-size: 24px;font-family:helvetica, sans-serif;')
       br
-      h1 404 Error!
+      h1 404 Whoops
       br
       div Sorry, the document you are trying to reach is unavailable!
       br
-      a(href='/landing') Return to GraphDocs
+      a(href='/landing') Return to Cograph
