remove extra share in menu and make edit button contingent in detailsview

--- a/app/templates/graph_settings.html
+++ b/app/templates/graph_settings.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 <h6>Embed Code</h6>
-<i>(Only works with Viewable by: Anyone / Anyone with the link)</i>
+<i>(Only works with Viewable by Anyone / Anyone with the link)</i>
 <textarea><%= embed %></textarea>
 <br/>
 <button id="save-graph-settings" class="btn btn-info pull-right">Save Changes</button>
