--- a/app/public/forgotten-password.jade
+++ b/app/public/forgotten-password.jade
@@ -36,11 +36,11 @@ html
             .form-group
               label Email
               input.form-control.input-lg(type='text', name='email')
-            button.btn.btn-default.btn-lg.pull-right(type='submit') Send Reset
+            button.btn.btn-default.btn-lg.pull-right(type='submit') Reset
           p
             a(href='/login') Login
-          p
-            a(href='/signup') Signup
+          br
+          br
     script(src="neural/js/vendor/Detector.js")
     script(src="neural/js/vendor/dat.gui.min.js")
     script(src="neural/js/vendor/stats.min.js")
