--- a/app/public/login.jade
+++ b/app/public/login.jade
@@ -52,7 +52,7 @@ html
               input.form-control.input-lg(type='password', name='password')
             button.btn.btn-default.btn-lg.pull-right(type='submit') Login
           p
-            a(href='/forgot-password') Forgot your Password?
+            a(href='/forgotten-password') Forgot your Password?
           p
             | Need an account? 
             a(href='/signup') Signup
