--- a/app/public/signup.jade
+++ b/app/public/signup.jade
@@ -40,4 +40,4 @@ html
           
           p
             | Already have an account? 
-            a(href='/login') Start Connecting
+            a(href='/login') Login
