--- a/app/public/user-index.jade
+++ b/app/public/user-index.jade
@@ -52,13 +52,13 @@ html(lang='en')
     .container.main-content
       .row
         .col-md-12
-          h3 What is Cograph?
+          h3 What are Cographs?
           h3.full-size
             strong Cographs are webs of ideas that you can create, explore and publish.
           br
           h3 Why should I use graphs?
           h3.full-size
-            strong Graphs are great for connected information. (Information wants to be a graph)
+            strong Graphs are great for connected information.
           br
           h3 Here are some popular Cographs
           h3.full-size
