better beta key flow

--- a/app/public/footer-logged-in.jade
+++ b/app/public/footer-logged-in.jade
@@ -5,8 +5,6 @@ footer
     p.pull-right
       a(href="http://www.twitter.com/thecograph") @thecograph
       | &nbsp;&nbsp;&nbsp;&nbsp;
-      a(href='/login') Login
-      | &nbsp;&nbsp;&nbsp;&nbsp;
-      a(href='/signup') Request Beta Key
+      a(href='/logout') Logout
       | &nbsp;&nbsp;&nbsp;&nbsp;
       a(href='mailto:hello@cograph.co') Contact
