--- a/app/public/user-index.jade
+++ b/app/public/user-index.jade
@@ -40,7 +40,7 @@ html(lang='en')
             li
               a(href='/login') Login
             li
-              a(href='/signup') Sign Up
+              a(href='/request-key') Request Beta Key
 
     #top.jumbotron
       .container
