--- a/app/public/account.jade
+++ b/app/public/account.jade
@@ -17,7 +17,8 @@ head
     include profileheader
     .container.pad-top
       .col-sm-6.col-sm-offset-3
-        h1
+        br
+        h2
           |  Account
         if message && message.length > 0 
           .alert.alert-danger #{message}
@@ -28,11 +29,11 @@ head
             input.form-control(type='email', name='email' value='#{user.local.email}')
           .form-group
             label Username
-            input.form-control(type='text', name='name'  value='#{user.local.name}')
+            input.form-control(type='text', name='name'  value='#{user.local.name}', disabled)
           .form-group
             label Old Password
             input.form-control(type='password', name='password')
           .form-group
             label New Password
             input.form-control(type='password', name='password')
-          button.btn.btn-warning.btn-lg(type='submit') Save Changes
+          button.btn.btn-info.pull-right.btn-lg(type='submit') Save
