--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -54,6 +54,11 @@
   height: auto;
 }
 
+.node-info-body.hide-toolbar .node-toolbar {
+  display: none;
+}
+
+
 .node, .connection {
   cursor: pointer;
 }
