change grid control buttons to default rather than primary

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -28,9 +28,9 @@ block content
     .toolbar.bottom.right.controls#toolbar-bottom-right
       ul.nav.navbar-nav
         li
-          button#grid-view-button.btn.btn-primary Grid
+          button#grid-view-button.btn.btn-default Grid
         li  
-          button#graph-view-button.btn.btn-primary Graph
+          button#graph-view-button.btn.btn-default Graph
         li
           a#filter-modal-toggle(href="" data-toggle="modal" data-target="#filters_template")
             i.fa.fa-filter(title="filter")
