--- a/app/public/forgotten-password.jade
+++ b/app/public/forgotten-password.jade
@@ -32,7 +32,7 @@ html
       .row
         .col-md-6.col-md-offset-3.col-xs-12#login-form
           h3 Reset your Password
-          form(action='/login', method='post')
+          form(action='/forgotten-password', method='post')
             .form-group
               label Email
               input.form-control.input-lg(type='text', name='email')
