working registering for beta and sending to heroku

--- a/app/public/login.jade
+++ b/app/public/login.jade
@@ -55,7 +55,7 @@ html
             a(href='/forgotten-password') Forgot your Password?
           p
             | Need an account? 
-            a(href='/signup') Signup
+            a(href='/request-key') Request Key
     script(src="neural/js/vendor/Detector.js")
     script(src="neural/js/vendor/dat.gui.min.js")
     script(src="neural/js/vendor/stats.min.js")
