--- a/app/public/signup.jade
+++ b/app/public/signup.jade
@@ -41,6 +41,7 @@ html
               input.form-control(type='password', name='password')
             button.btn.btn-info.pull-right.btn-lg(type='submit') Signup
           hr
-          
+          p
+            a(href='/request-key') Request Beta Access
           p
             a(href='/login') Already have an account? 
