--- a/app/public/layout.jade
+++ b/app/public/layout.jade
@@ -17,7 +17,11 @@ html(lang="en")
     link(href='/assets/stylesheets/graph.css', rel='stylesheet')  
     link(href="/assets/libs/feedback-bot/src/feedback.css" rel='stylesheet')
   
-    script(type='text/javascript', data-main="/main", src="/assets/libs/requirejs/require.js") //loads main.js
+    // For development
+    //script(type='text/javascript', data-main="/main", src="/assets/libs/requirejs/require.js")
+
+    // For production
+    script(type='text/javascript', data-main="/main-built", src="/assets/libs/requirejs/require.js")
     script.
       window.prefetch = {};
       window.prefetch.nodes =!{JSON.stringify(nodes)};
